tests/rosetta/out/Smalltalk/100-doors-3.out
/tmp/100-doors-3.st:5: parse error, expected ']'
