tests/rosetta/out/Smalltalk/100-doors-3.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| result i j |
result := ''.
1 to: 101 do: [:i |.
j := 1.
[(((j * j)) < i)] whileTrue: [.
j := (j + 1).
].
.
((((j * j)) = i)) ifTrue: [
result := (result + 'O').
] ifFalse: [
result := (result + '-').
].
].
.
Transcript show: (result) printString; cr.
